--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
-    "node": "^20.19.5"
+    "node": "^20.19.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
